--- a/example/opentelemetry/tracedemocompose/docker-compose.yml
+++ b/example/opentelemetry/tracedemocompose/docker-compose.yml
@@ -26,5 +26,5 @@ services:
       - 8889:8889 # Prometheus exporter metrics
       - 13133:13133 # health_check extension
       - 54317:4317 # OTLP gRPC receiver
-      - 54318:4318 # OTLP http receiver
+      - 54318:4318 # OTLP http receiver 推送数据的位置
       - 55679:55679 # zpages extension
