--- a/example/opentelemetry/tracedemocompose/docker-compose.yml
+++ b/example/opentelemetry/tracedemocompose/docker-compose.yml
@@ -1,21 +1,21 @@
 version: "3"
 services:
-  jaeger:
-    image: jaegertracing/all-in-one:1.52
-    restart: always
-    environment:
-      - COLLECTOR_OTLP_ENABLED=true
-    ports:
-      - 5775:5775/udp
-      - 6831:6831/udp
-      - 6832:6832/udp
-      - 5778:5778
-      - 16686:16686
-      - 14268:14268
-      - 14250:14250
-      - 4317:4317
-      - 4318:4318
-      - 9411:9411
+#  jaeger:
+#    image: jaegertracing/all-in-one:1.52
+#    restart: always
+#    environment:
+#      - COLLECTOR_OTLP_ENABLED=true
+#    ports:
+#      - 5775:5775/udp
+#      - 6831:6831/udp
+#      - 6832:6832/udp
+#      - 5778:5778
+#      - 16686:16686
+#      - 14268:14268
+#      - 14250:14250
+#      - 4317:4317
+#      - 4318:4318
+#      - 9411:9411
   otel-collector:
     image: otel/opentelemetry-collector-contrib
     volumes:
