--- a/example/opentelemetry/tracedemocompose/otel-collector-config.yml
+++ b/example/opentelemetry/tracedemocompose/otel-collector-config.yml
@@ -2,38 +2,51 @@ receivers: # 接收器
   otlp:
     protocols:
       grpc:
+        endpoint: "0.0.0.0:4317"
       http:
+        endpoint: "0.0.0.0:4318"
+
+  prometheus:
+    config:
+      scrape_configs:
+        - job_name: 'otel-collector'
+          scrape_interval: 10s
+          static_configs:
+            - targets: [ "0.0.0.0:8888", "0.0.0.0:8889" ]
 
 processors:
   batch:
-  tail_sampling:
-    decision_wait: 5s
-    num_traces: 50000
-    expected_new_traces_per_sec: 1
-    policies:
-      [
-        {
-          name: error-always-sample,
-          type: boolean_attribute,
-          boolean_attribute: { key: error, value: true }
-        }
-      ]
+#  tail_sampling:
+#    decision_wait: 5s
+#    num_traces: 50000
+#    expected_new_traces_per_sec: 1
+#    policies:
+#      [
+#        {
+#          name: error-always-sample,
+#          type: boolean_attribute,
+#          boolean_attribute: { key: error, value: true }
+#        }
+#      ]
 
 exporters: # 导出器
   debug:
-  otlp/jaeger:
-    endpoint: http://jaeger:4317
-    tls:
-      insecure: true
+#  otlp/jaeger:
+#    endpoint: http://localhost:4317
+#    tls:
+#      insecure: true
 extensions:
   health_check:
+    endpoint: "0.0.0.0:13133"
   pprof:
+    endpoint: "0.0.0.0:1888"
   zpages:
-    endpoint: 0.0.0.0:55679
+    endpoint: "0.0.0.0:55679"
+
 service:
   extensions: [ health_check, pprof, zpages ]
   pipelines: # 定义怎么去用
     traces: #
       receivers: [ otlp ]
-      processors: [ batch,tail_sampling ]
-      exporters: [ debug,otlp/jaeger ] # 导出到debug和jaeger中
+      processors: [ batch ]
+      exporters: [ debug ]
