--- a/example/opentelemetry/tracedemocompose/otel-collector-config.yml
+++ b/example/opentelemetry/tracedemocompose/otel-collector-config.yml
@@ -31,10 +31,10 @@ processors:
 
 exporters: # 导出器
   debug:
-#  otlp/jaeger:
-#    endpoint: http://localhost:4317
-#    tls:
-#      insecure: true
+  otlp/jaeger:
+    endpoint: http://jaeger:4317
+    tls:
+      insecure: true
 extensions:
   health_check:
     endpoint: "0.0.0.0:13133"
@@ -49,4 +49,4 @@ service:
     traces: #
       receivers: [ otlp ]
       processors: [ batch ]
-      exporters: [ debug ]
+      exporters: [ debug, otlp/jaeger ]
