--- a/conf/otel-collector-config.yml
+++ b/conf/otel-collector-config.yml
@@ -27,6 +27,16 @@ processors:
           name: error-always-sample,
           type: boolean_attribute,
           boolean_attribute: { key: error, value: true }
+        },
+        {
+          name: http-slow,
+          type: numeric_attribute,
+          numeric_attribute: { key: http.duration, min_value: 1, max_value: 9223372036854775807 }
+        },
+        {
+          name: http-status-error,
+          type: string_attribute,
+          string_attribute: { key: http.status_code, values: [ 500 ] }
         }
       ]
 
